--- a/gui/simulationwidget.ui
+++ b/gui/simulationwidget.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0,0,0">
+  <layout class="QGridLayout" name="gridLayout" columnstretch="0,1,0,1,0">
    <item row="3" column="0">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
@@ -87,14 +87,10 @@
     </spacer>
    </item>
    <item row="4" column="2">
-    <widget class="TimeControlWidget" name="timeControl" native="true">
-     <layout class="QHBoxLayout" name="timeControllLayout"/>
-    </widget>
+    <widget class="TimeControlWidget" name="timeControl" native="true"/>
    </item>
    <item row="0" column="0">
-    <widget class="HistoryWidget" name="historyWidget" native="true">
-     <layout class="QHBoxLayout" name="historyControlLayout"/>
-    </widget>
+    <widget class="HistoryWidget" name="historyWidget" native="true"/>
    </item>
   </layout>
  </widget>
