Add ElectricCharge graphic object to palette

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -15,10 +15,10 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
+    <item row="1" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_2"/>
     </item>
-    <item row="0" column="2">
+    <item row="1" column="2">
      <widget class="QTabWidget" name="tabWidget">
       <property name="tabShape">
        <enum>QTabWidget::Rounded</enum>
@@ -41,8 +41,23 @@
       </widget>
      </widget>
     </item>
-    <item row="0" column="1">
-     <layout class="QVBoxLayout" name="palette"/>
+    <item row="1" column="1">
+     <layout class="QVBoxLayout" name="palette" stretch="0,1">
+      <item>
+       <widget class="QGroupBox" name="physicalBox">
+        <property name="title">
+         <string>Physical</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="electrostaticBox">
+        <property name="title">
+         <string>Electrostatic</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
