--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -122,7 +122,7 @@
   </action>
   <action name="actionSave_as">
    <property name="text">
-    <string>Save as...</string>
+    <string>S&amp;ave as...</string>
    </property>
   </action>
   <action name="action_Open">
