--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -83,6 +83,7 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <addaction name="action_New"/>
     <addaction name="actionSave"/>
     <addaction name="actionSave_as"/>
     <addaction name="action_Open"/>
@@ -158,6 +159,11 @@
   <action name="actionAbout_Discharge">
    <property name="text">
     <string>About Discharge</string>
+   </property>
+  </action>
+  <action name="action_New">
+   <property name="text">
+    <string>&amp;New</string>
    </property>
   </action>
  </widget>
